--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "html-to-text": "^9.0.5",
+    "moment": "^2.30.1",
+    "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.4"
+    "react-fast-marquee": "^1.6.5",
+    "react-html-parser": "^2.0.2",
+    "react-icons": "^5.5.0",
+    "react-multi-carousel": "^2.8.6",
+    "react-spinners-components": "^2.0.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
